// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LangChainTracer payload snapshots for run create and update 1`] = `
{
  "child_execution_order": 1,
  "child_runs": undefined,
  "dotted_order": Any<String>,
  "events": ArrayContaining [
    ObjectContaining {
      "time": Any<String>,
    },
  ],
  "execution_order": 1,
  "extra": {
    "metadata": {},
    "runtime": {
      "library": "langchain-js",
      "runtime": "node",
    },
  },
  "id": Any<String>,
  "inputs": {
    "input": "test input",
  },
  "name": "RunnableLambda",
  "parent_run_id": undefined,
  "reference_example_id": undefined,
  "run_type": "chain",
  "serialized": {
    "id": [
      "langchain_core",
      "runnables",
      "RunnableLambda",
    ],
    "lc": 1,
    "type": "not_implemented",
  },
  "session_name": undefined,
  "start_time": Any<Number>,
  "tags": [],
  "trace_id": Any<String>,
}
`;

exports[`LangChainTracer payload snapshots for run create and update 2`] = `
{
  "child_execution_order": 2,
  "child_runs": undefined,
  "dotted_order": Any<String>,
  "events": ArrayContaining [
    ObjectContaining {
      "time": Any<String>,
    },
  ],
  "execution_order": 2,
  "extra": {
    "metadata": {},
    "runtime": {
      "library": "langchain-js",
      "runtime": "node",
    },
  },
  "id": Any<String>,
  "inputs": {
    "input": "test input",
  },
  "name": "RunnableLambda",
  "parent_run_id": Any<String>,
  "reference_example_id": undefined,
  "run_type": "chain",
  "serialized": {
    "id": [
      "langchain_core",
      "runnables",
      "RunnableLambda",
    ],
    "lc": 1,
    "type": "not_implemented",
  },
  "session_name": undefined,
  "start_time": Any<Number>,
  "tags": [],
  "trace_id": Any<String>,
}
`;

exports[`LangChainTracer payload snapshots for run create and update 3`] = `
{
  "dotted_order": Any<String>,
  "end_time": Any<Number>,
  "error": undefined,
  "events": ArrayContaining [
    ObjectContaining {
      "time": Any<String>,
    },
  ],
  "extra": {
    "metadata": {},
  },
  "inputs": {
    "input": "test input",
  },
  "outputs": {
    "output": "processed: test input",
  },
  "parent_run_id": Any<String>,
  "session_name": undefined,
  "trace_id": Any<String>,
}
`;

exports[`LangChainTracer payload snapshots for run create and update 4`] = `
{
  "dotted_order": Any<String>,
  "end_time": Any<Number>,
  "error": undefined,
  "events": ArrayContaining [
    ObjectContaining {
      "time": Any<String>,
    },
  ],
  "extra": {
    "metadata": {},
  },
  "inputs": {
    "input": "test input",
  },
  "outputs": {
    "output": "parent: processed: test input",
  },
  "parent_run_id": undefined,
  "session_name": undefined,
  "trace_id": Any<String>,
}
`;